<resources>
    <string name="app_name">POS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">Test</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invoice_no">Invoice No.</string>
    <string name="card_no">Membership Card No.</string>
    <string name="unpaid_invoices">Unpaid Invoices:</string>
    <string name="points">Points</string>
    <string name="pre_order">Pre-order</string>
    <string name="products_membership">Products/Membership</string>
    <string name="x">1X</string>
    <string name="item">Item</string>
    <string name="product">Product</string>
    <string name="unit">Unit</string>
    <string name="qty">QTY</string>
    <string name="unit_price">Unit Price</string>
    <string name="disc">DISC</string>
    <string name="total_price">Total Price</string>
    <string name="staff_name">Staff Name:</string>
    <string name="id">ID:</string>
    <string name="logout">Logout</string>
    <string name="subtotal">SubTotal:</string>
    <string name="discount">Discount:</string>
    <string name="charge">Charge:</string>
    <string name="tax">Tax:</string>
    <string name="payment">PAYMENT</string>
    <string name="member_details">MEMBER DETAILS</string>
    <string name="member_registration">Member Registration</string>
    <string name="membership_category">Membership category</string>
    <string name="membership_no">Membership no</string>
    <string name="membership_card_no">Membership card no</string>
    <string name="contact_no">Contact no</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birthday">Birthday</string>
    <string name="id_new_member">ID</string>
    <string name="gender">Gender</string>
    <string name="region">Region</string>

    <string name="inventory_search">Inventory Search</string>
    <string name="keywords">Keywords</string>
    <string name="description">Description</string>
    <string name="tw_shop">TW Shop</string>
    <string name="tst_shop">TST Shop</string>
    <string name="total_qty">Total Qty</string>
    <string name="manager_process">Manager Process</string>

    <string name="shopping">SHOPPING</string>
    <string name="view_member">View Member</string>
    <string name="member_details_l">Member Details</string>
</resources>
