<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:background="@drawable/shape_circular_bead_blue_item_title"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_title_height">
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/item"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/product"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/unit"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/qty"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/unit_price"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/disc"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white_title"
        android:text="@string/total_price"/>

</LinearLayout>