<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/shape_circular_bead_blue_item_title_stock"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_title_height">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/product"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/description"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/tw_shop"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/tst_shop"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/total_qty"/>
    <View
        android:background="@color/gray_light"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/item_title_height"
        android:gravity="center"
        style="@style/text_style_white"
        android:text="@string/unit"/>

</LinearLayout>