<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_circular_bead"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_circular_bead_gray_top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/margin_bottom"
            android:paddingLeft="@dimen/space_distance"
            android:paddingRight="@dimen/space_distance"
            android:paddingTop="@dimen/margin_bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"></LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                style="@style/text_style_white"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="bottom"
                                android:text="@string/qty" />

                            <TextView
                                style="@style/text_style_white"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:gravity="bottom"
                                android:paddingRight="@dimen/right_panel_margin"
                                android:text="4" />
                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/white" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/right_panel_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/subtotal" />

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:paddingRight="@dimen/right_panel_margin"
                    android:text="$4,191.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/right_panel_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/discount" />

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:background="@drawable/shape_rect_dashed"
                    android:paddingRight="@dimen/right_panel_margin"
                    android:text="$200.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/right_panel_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/charge" />

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:background="@drawable/shape_rect_dashed"
                    android:paddingRight="@dimen/right_panel_margin"
                    android:text="$0.00" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/tax" />

                <TextView
                    style="@style/text_style_white"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:paddingRight="@dimen/right_panel_margin"
                    android:text="$0.00" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/total_tv_height"
            android:gravity="center"
            android:singleLine="true"
            android:text="$3,991.00"
            android:textSize="@dimen/total_tv_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/space_distance"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/right_panel_button_width"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/bt_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_pay"
                />
            <TextView
                android:id="@+id/tv_pay_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/text_style_white_button"
                android:layout_gravity="center"
                android:text="@string/payment"/>
        </FrameLayout>
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/right_panel_button_width"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/bt_memberDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_memberdetails"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_button_blue"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="@dimen/space_distance"
                android:text="@string/member_details"/>
        </FrameLayout>

    </LinearLayout>


</LinearLayout>
