<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/gray_deep"
    android:padding="@dimen/space_distance"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_title_height"
            android:paddingRight="@dimen/margin_start"
            android:background="@drawable/shape_circular_bead_blue_title">
            <TextView
                android:layout_marginLeft="@dimen/space_distance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                style="@style/text_style_white"
                android:text="@string/inventory_search"/>
            <ImageView
                android:id="@+id/iv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/selector_cancel_white"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/divider_new_member"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/inventory_search_middle_height"
            android:background="@color/gray_light"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/margin_start"
                android:paddingRight="@dimen/margin_start"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_style_white"
                    android:layout_marginBottom="@dimen/margin_bottom_top_panel"
                    android:text="@string/product"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_style_white"
                    android:text="@string/keywords"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:background="@drawable/shape_circular_bead_small" />
                <EditText
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText_height"
                    android:background="@drawable/shape_circular_bead_small" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/margin_start"
                android:gravity="center_vertical|right">
                <ImageView
                    android:id="@+id/iv_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_refresh_white"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space_distance"
            android:background="@drawable/shape_circular_bead_bottom"
            android:orientation="vertical">
            <include layout="@layout/item_inventory_search_title"/>
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@null"
                android:scrollbars="none"
                android:dividerHeight="@dimen/margin_bottom"
                android:overScrollMode="never"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>